--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,14 +16,16 @@
         <div>
             <img class="logos" src="../assets/imagenes/logo.png" alt="logo" align="left">
         </div>
+        <section>
         <nav>
             <ul>
-                <li> <a class="a" style="color: black" href="./index.html"> Inicio</a></li>
-                <li> <a class="a" style="color: black" href="./nosotros.html">Nosotros</a></li>
-                <li> <a class="a" style="color: black" href="./menu.html">Menu </a></li>
-                <li> <a class="a" style="color: black" href="./contacto.html">Contacto </a></li>
+                <li> <a style="color: black" href="./index.html"> Inicio</a></li>
+                <li> <a style="color: black" href="./nosotros.html">Nosotros</a></li>
+                <li> <a style="color: black" href="./menu.html">Menu </a></li>
+                <li> <a style="color: black" href="./contacto.html">Contacto </a></li>
             </ul>
         </nav>
+        </section>
     </header>
     <main>
     <section>
