--- a/pages/index.html
+++ b/pages/index.html
@@ -21,10 +21,10 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a class="a" style="color: black" href="./index.html"> Inicio</a>
-                <li><a class="a" style="color: black" href="./nosotros.html">Nosotros</a></li>
-                <li><a class="a" style="color: black" href="./menu.html">Menu </a></li>
-                <li><a class="a" style="color: black" href="./contacto.html">Contacto </a></li>
+                <li><a style="color: black" href="./index.html"> Inicio</a>
+                <li><a style="color: black" href="./nosotros.html">Nosotros</a></li>
+                <li><a style="color: black" href="./menu.html">Menu </a></li>
+                <li><a style="color: black" href="./contacto.html">Contacto </a></li>
             </ul>
         </nav>
     </header>
