probando merge con rama1

--- a/pages/index.html
+++ b/pages/index.html
@@ -53,6 +53,6 @@
     </div>
     </section>
     </main>
-    <footer class="footer">El Gala De Oro ®️ (By Joaquin Minig)</footer>
+    <footer class="footer">El Galeon De Oro ®️ (By Joaquin Minig)</footer>
 </body>
 </html>
