--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <nav class="nav">
             <ul>
                 <li><a style="color: black" href="./index.html"> Inicio</a>
-                <li><a style="color: black" href="./nosotros.html">Nosotros</a></li>
-                <li><a style="color: black" href="./menu.html">Menu </a></li>
-                <li><a style="color: black" href="./contacto.html">Contacto </a></li>
+                <li><a style="color: black" href="./pages/nosotros.html">Nosotros</a></li>
+                <li><a style="color: black" href="./pages/menu.html">Menu </a></li>
+                <li><a style="color: black" href="./pages/contacto.html">Contacto </a></li>
             </ul>
         </nav>
     </header>
