--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
         <section>
         <nav>
             <ul>
-                <li> <a style="color: black" href="./index.html"> Inicio</a></li>
+                <li> <a style="color: black" href="../index.html"> Inicio</a></li>
                 <li> <a style="color: black" href="./nosotros.html">Nosotros</a></li>
                 <li> <a style="color: black" href="./menu.html">Menu </a></li>
                 <li> <a style="color: black" href="./contacto.html">Contacto </a></li>
