--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,7 +20,7 @@
         </div>
         <nav>
             <ul>
-             <li><a style="color: black" href="./index.html"> Inicio</a></li>     
+             <li><a style="color: black" href="../index.html"> Inicio</a></li>     
              <li><a style="color: black" href="./nosotros.html">Nosotros</a></li>
              <li><a style="color: black" href="./menu.html">Menu </a></li>
              <li><a style="color: black" href="./contacto.html">Contacto </a></li>
